# Agnostic-Digital-Twin-Robotic-Controller

./: .gitignore  .gitmodules  DigitalTwin.py  README.md  build_pyrealsense.sh  environment.yml  main.py  pyproject.toml  requirements.txt  setup_and_run.sh  template_moves.py
CSpaceController/: .gitignore  environment.yml
CSpaceController/MatrixMath/: __init__.py
CSpaceController/Robot/: Robot.py  __init__.py
CSpaceController/pyBullet/: Simulation.py
Camera/: objDetection.py
DigitalTwin/: DigitalTwin.py  README.md  __init__.py  localpubsub.py
DigitalTwin/Environment/Constraints/: ConfigurationSpace.py  __init__.py
DigitalTwin/Environment/Discovery/: YOLOPoseDetector.py
DigitalTwin/Real/: Robot.py
DigitalTwin/Real/Controller/: __init__.py  (+1 more)
DigitalTwin/Tools/: Math.py  __init__.py
Environment/: Glovebox.py  __init__.py
MatrixMath/: Transforms.py
Robot/: AgnosticController.py  ConfigurationSpace.py  Robot.py
RobotConfigs/mycobot_pro600/: my_cobot_pro600.json  mycobot_pro600.urdf
Utils/: BezierSpline.py  RRT-Conn.py  RRTs.py  __init__.py
digital_twin/: README.md  __init__.py  cup_path_show.py  cup_tracker.json  digitaltwin.py  dt_glovebox.py  localpubsub.py  object_positioning.py  port_monitor.py  robot_control.py  robot_params.json
digital_twin/Environment/: __init__.py
digital_twin/camera/: YOLOPoseDetector.py  dino.py  object_pos_detect.py  planar_homography_yolo.py  realsense.py
digital_twin/communication/: __init__.py  localpubsub.py
digital_twin/constraints/: ConfigurationSpace.py  Glovebox.py  __init__.py
digital_twin/env/: __init__.py
digital_twin/pathing/: iksolver.py  pathplanner.py
digital_twin/real/: Robot.py
digital_twin/templates/: template_moves.py
digital_twin/tools/: transform.py
tests/: listener.py  talker.py
tests/cup_motion/: cup_tracker.json  test_cup_tracking.py
tests/mycobot/: myCobot_pro600.xml  robot_arm.py
tests/ros_minimal/: README.md
(+29 files in other folders)
