[tool.poetry]
name = "digital-twin"
version = "0.1.0"
description = "Environment setup for Digital Twin with MuJoCo and YOLOv11"
authors = ["MGross21 <MGross21@example.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
numpy = "*"
mediapy = "*"
mujoco = "*"
pyyaml = "*"
trimesh = "*"
screeninfo = "*"
colorama = "*"
rich = "*"
defusedxml = "*"
gym = "*"
ffmpeg = "*"
tqdm = "*"
ipywidgets = "*"
pandas = "*"
matplotlib = "*"
scipy = "*" 
ultralytics = "*" # YOLOv11
opencv-python = "*" # OpenCV for image processing

# Add editable local dependencies using Poetry path dependencies
mujoco-toolbox = { path = "digital_twin/mujoco_toolbox", develop = true }
armctl = { path = "digital_twin/armctl", develop = true }
imageio = "^2.37.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
